--- a/parts/autoproject/removetargetdlgbase.ui
+++ b/parts/autoproject/removetargetdlgbase.ui
@@ -9,7 +9,7 @@
             <x>0</x>
             <y>0</y>
             <width>472</width>
-            <height>471</height>
+            <height>477</height>
         </rect>
     </property>
     <property name="caption">
@@ -30,7 +30,6 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-
                 <widget class="QLayoutWidget">
                     <property name="name">
                         <cstring>targetLayout</cstring>
@@ -42,7 +41,6 @@
                         <property name="margin">
                             <number>0</number>
                         </property>
-
                         <widget class="KSqueezedTextLabel" row="0" column="1">
                             <property name="name">
                                 <cstring>directoryLabel</cstring>
@@ -212,7 +210,6 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-
                 <spacer>
                     <property name="name">
                         <cstring>buttonSpacer</cstring>
@@ -246,7 +243,7 @@
                         <cstring>cancelButton</cstring>
                     </property>
                     <property name="text">
-                        <string>C&amp;ancel</string>
+                        <string>&amp;Cancel</string>
                     </property>
                 </widget>
             </hbox>
@@ -258,7 +255,6 @@
 </includes>
 <layoutdefaults spacing="6" margin="11"/>
 <layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
-
 <includehints>
     <includehint>ksqueezedtextlabel.h</includehint>
     <includehint>klistbox.h</includehint>
