--- a/parts/cvs/cvsform.ui
+++ b/parts/cvs/cvsform.ui
@@ -24,7 +24,6 @@ for your new project</string>
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-
         <widget class="QLabel" row="6" column="0">
             <property name="name">
                 <cstring>TextLabel5</cstring>
@@ -167,7 +166,7 @@ e.g. &lt;tt&gt;/home/cvsroot&lt;/tt&gt; or &lt;tt&gt;:pserver:me@localhost:/home
                 <enum>Plain</enum>
             </property>
             <property name="text">
-                <string>CVS_RSH</string>
+                <string>CVS_RSH:</string>
             </property>
         </widget>
     </grid>
@@ -182,14 +181,13 @@ e.g. &lt;tt&gt;/home/cvsroot&lt;/tt&gt; or &lt;tt&gt;:pserver:me@localhost:/home
     <tabstop>release_edit</tabstop>
 </tabstops>
 <includes>
-    <include location="local" impldecl="in implementation">cvsform.ui.h</include>
     <include location="global" impldecl="in implementation">kdialog.h</include>
+    <include location="local" impldecl="in implementation">cvsform.ui.h</include>
 </includes>
-<layoutdefaults spacing="6" margin="11"/>
-<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <slots>
     <slot>init()</slot>
     <slot>destroy()</slot>
 </slots>
-
+<layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
