--- a/parts/javasupport/javanewclassdlgbase.ui
+++ b/parts/javasupport/javanewclassdlgbase.ui
@@ -8,8 +8,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>473</width>
-            <height>578</height>
+            <width>566</width>
+            <height>780</height>
         </rect>
     </property>
     <property name="caption">
@@ -22,7 +22,6 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-
         <widget class="QTabWidget">
             <property name="name">
                 <cstring>class_tabs</cstring>
@@ -66,7 +65,6 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-
                             <widget class="QLabel">
                                 <property name="name">
                                     <cstring>documentation_label_</cstring>
@@ -102,7 +100,6 @@ doxygen or similar tools.</string>
                             <property name="name">
                                 <cstring>unnamed</cstring>
                             </property>
-
                             <widget class="QLabel">
                                 <property name="name">
                                     <cstring>header_label</cstring>
@@ -233,7 +230,6 @@ Namespace1::Namespace2::...::NamespaceN</string>
                             <property name="name">
                                 <cstring>unnamed</cstring>
                             </property>
-
                             <widget class="QPushButton" row="2" column="0">
                                 <property name="name">
                                     <cstring>addbaseclass_button</cstring>
@@ -611,7 +607,7 @@ Namespace1::Namespace2::...::NamespaceN</string>
                                     <cstring>gtk_box</cstring>
                                 </property>
                                 <property name="text">
-                                    <string>&amp;Generate GTK+ Class</string>
+                                    <string>&amp;Generate GTK+ class</string>
                                 </property>
                             </widget>
                             <widget class="QCheckBox">
@@ -993,7 +989,6 @@ Namespace1::Namespace2::...::NamespaceN</string>
                 <property name="margin">
                     <number>0</number>
                 </property>
-
                 <spacer>
                     <property name="name">
                         <cstring>Spacer7_2</cstring>
@@ -1032,23 +1027,6 @@ Namespace1::Namespace2::...::NamespaceN</string>
     </vbox>
 </widget>
 <customwidgets>
-    <customwidget>
-        <class>KLineEdit</class>
-        <header location="global">klineedit.h</header>
-        <sizehint>
-            <width>0</width>
-            <height>0</height>
-        </sizehint>
-        <container>0</container>
-        <sizepolicy>
-            <hordata>0</hordata>
-            <verdata>7</verdata>
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-        </sizepolicy>
-        <pixmap>image0</pixmap>
-        <signal>textChanged(const QString &amp;)</signal>
-    </customwidget>
     <customwidget>
         <class>ClassGeneratorConfig</class>
         <header location="local">classgeneratorconfig.h</header>
@@ -1284,6 +1262,9 @@ Namespace1::Namespace2::...::NamespaceN</string>
     <tabstop>gen_config</tabstop>
     <tabstop>constructors_java_edit</tabstop>
 </tabstops>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <slots>
     <slot access="protected">updateClassStore()</slot>
     <slot access="protected">access_view_mouseButtonPressed( int button, QListViewItem * item, const QPoint &amp; p, int c )</slot>
@@ -1325,9 +1306,6 @@ Namespace1::Namespace2::...::NamespaceN</string>
     <slot access="protected">baseIncludeChanged(const QString&amp;)</slot>
     <slot access="protected">scopeboxActivated(int)</slot>
 </slots>
-<includes>
-    <include location="global" impldecl="in implementation">kdialog.h</include>
-</includes>
 <layoutdefaults spacing="6" margin="11"/>
 <layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <includehints>
